--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,9 +9,10 @@
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.timeline": "1.8.7",
+    "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
-    "com.unity.xr-content.xr-sim-environments": "file:../ContentPackages\\com.unity.xr-content.xr-sim-environments-2.0.1.tgz",
+    "com.unity.xr-content.xr-sim-environments": "file:../ContentPackages/com.unity.xr-content.xr-sim-environments-2.0.1.tgz",
     "com.unity.xr.arcore": "6.0.3",
     "com.unity.xr.arfoundation": "6.0.3",
     "com.unity.xr.arkit": "6.0.3",
